# geai

./: .gitignore  README  README.md  accuracy_results.csv  bayesian.ipynb  checkpoints.dvc  data.dvc  dvc.yaml  evaluation_results.npz  flake.nix  forward.ipynb  generator.ipynb  generator.py  logs.dvc  main.ipynb  models.dvc  params.yaml  plots.py  pyproject.toml  requirements.txt  shell.nix  splits.dvc  temp_sim.py  test.csv  test.ipynb
.dvc/: config
SIMPEG/: plot_1a_gravity_anomaly.ipynb  plot_inv_1a_gravity_anomaly.ipynb  plot_inv_1b_gravity_anomaly_irls.ipynb  plot_inv_1c_gravity_anomaly_irls_compare_weighting.ipynb
archive/: bayesian.ipynb  claude_refactor_train.py  debugger.ipynb  forward.ipynb  generator.ipynb  test.ipynb  train.ipynb
archive/SIMPEG/: plot_1a_gravity_anomaly.ipynb  plot_inv_1a_gravity_anomaly.ipynb  (+1 more)
data/profile_scaling/: master_n12.h5  (+8 more)
dvc/: checkpoints.dvc  data.dvc  logs.dvc  models.dvc  splits.dvc
evaluation/: init.npz
metrics/: eval_0.5.json  eval_5.json  eval_50.json  eval_500.json  eval_default_model.json  eval_huber.json  eval_mae.json  eval_mse.json  eval_single_block_05_f.json  eval_smooth_l1.json  eval_vector_f.json
pyGIMLi/: plot_05_inv-gravity-3d.ipynb
scripts/: eval.py  gen.py  raw.py  train.py
splits/: idx_init.npz  idx_test.npz  test.npz
src/: README.md  data.py  eval.py  evaluate.py  generator.py  inspect.py  inspect_bayesian.py  inspect_nn.py  io_hdf5.py  load.py  main.ipynb  metrics.py  model.py  nn.py  normalize.py  plot.py  plotter.py  sample.py  test.ipynb  train.py  transform.py  transforms.py  utils.py
(+45 files in other folders)
