[project]
name = "gravimetry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "choclo>=0.3.2",
    "discretize>=0.12.0",
    "h5py>=3.15.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "scipy>=1.16.2",
    "simpeg>=0.25.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]
