[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gravimetry"
version = "0.1.0"
description = "Gravity inversion via deep learning — data generation, UNet training, and evaluation pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geogen",
    "choclo>=0.3.2",
    "discretize>=0.12.0",
    "dvc>=3.0.0",
    "h5py>=3.15.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pyqt5>=5.15.11",
    "pyvista>=0.46.3",
    "scipy>=1.16.2",
    "simpeg>=0.25.0",
    "tbb==2022.3",
    "tbb4py==2022.3.0",
    "tensorboard>=2.20.0",
    "torch==2.5.1",
    "tqdm>=4.67.1",
    "trame>=3.12.0",
    "vtk>=9.5.2",
]


[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["archive/"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["."]
namespaces = true

[tool.uv.sources]
GeoGen = { git = "https://github.com/kostubhagarwal/StructuralGeo" }
